Add recipes and pictures

--- a/recipes/bar.html
+++ b/recipes/bar.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beans and Rice recipe</title>
 </head>
 <body>
     <h1>Beans and Rice</h1>
-    <a href="recipes/images/beansandrice.jpg"></a>
+    <img src="./images/Beansandrice.jpg" alt="Beans and rice"
+    width="400"
+    height="400">
     <h2>How to make the most delicious beans and rice</h2>
+    <p>One of the easier and more delicious recipes to eat on a weeknight. Although the taste might sometimes be difficult to nail, as the ingredients are so few. However, overall a hearty, cheap and delicious meal to accompany any bean lover or student on a budget.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 tablespoon vegetable oil</li> 
+        <li>1 onion, chopped</li>
+        <li>1 (400g) can black beans, undrained</li>
+        <li>1 (400g) can chopped tomatoes        </li>
+        <li>1 teaspoon dried oregagno</li>
+        <li>1/2 teaspoon dried oregano</li>
+        <li>1/2 teaspoon garlic powder</li>
+        <li>3,5 dl uncooked brown rice</li>
+        
+
+
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat oil over medium-high in a large saucepan. Add onion; cook and stir until tender. Add beans, tomatoes, oregano, and garlic powder. Bring to a boil.</li>
+        <li>Stir in rice. Cover; reduce heat and simmer 15 minutes - or until rice is cooked through. Remove from heat; let stand 5 minutes before serving. </li>
+    </ol>
     
 </body>
 </html>
