--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bar.html">Beans and Rice</a>
+    <ul>
+        <li><a href="recipes/bar.html">Beans and Rice</a></li>
+        <li><a href="recipes/espresso_martini.html">Espresso Martini</a></li>
+        <li><a href="recipes/Zaalouk.html">Zaalouk</a></li>
+    </ul>
     
 </body>
 </html>
